# FFedge

./: .gitignore  CMakeLists.txt  FFedge.cpp  FFedge.sln  FFedge.vcxproj  FFedge_res.rc  HISTORY.txt  README.md  README.txt  sample.html
lang/: en_US.rc  ja_JP.rc
